force-app/main/default/objects/Account/fields/Auditmate_Email__c.field-meta.xml
<CustomField>
    <fullName>Auditmate_Email__c</fullName>
    <inlineHelpText>Google email associated to the account - for receiving notifications, etc</inlineHelpText>
    <label>Auditmate Email</label>
    <type>Email</type>
</CustomField>