force-app/main/default/objects/Account/fields/Average_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Response_Time__c</fullName>
    <label>Average Response Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>