force-app/main/default/objects/Account/fields/Callsbacks_YTD__c.field-meta.xml
<CustomField>
    <fullName>Callsbacks_YTD__c</fullName>
    <label>Callsbacks YTD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>