force-app/main/default/objects/Account/fields/Customer_Accounts_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accounts_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Accounts Payable Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Customer Accounts Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>