force-app/main/default/objects/Account/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Customer Contact</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>