force-app/main/default/objects/Account/fields/Disputed_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Invoice_Count__c</fullName>
    <label>Disputed Invoice Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>