force-app/main/default/objects/Account/fields/Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Group_Email__c</fullName>
    <description>Email used to send notifications on behalf of the customer</description>
    <label>Group Email</label>
    <length>18</length>
    <type>Text</type>
</CustomField>