force-app/main/default/objects/Account/fields/Has_Customer_AP__c.field-meta.xml
<CustomField>
    <fullName>Has_Customer_AP__c</fullName>
    <formula>NOT(ISBLANK(Customer_Accounts_Contact__c))</formula>
    <label>Has Customer AP</label>
    <type>Checkbox</type>
</CustomField>