force-app/main/default/objects/Account/fields/InternalEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>InternalEmailAddress__c</fullName>
    <label>Internal Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>