force-app/main/default/objects/Account/fields/Maintenance_Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Completion_Rate__c</fullName>
    <label>Maintenance Completion Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>