force-app/main/default/objects/Account/fields/Maintenance_Visits_YTD__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Visits_YTD__c</fullName>
    <label>Maintenance Visits YTD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>