force-app/main/default/objects/Account/fields/Notification_Count__c.field-meta.xml
<CustomField>
    <fullName>Notification_Count__c</fullName>
    <label>Notification Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>