force-app/main/default/objects/Account/fields/Paid_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_Count__c</fullName>
    <label>Paid Invoice Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>