force-app/main/default/objects/Account/fields/saasoptics__e_invoice_billing_profile__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__e_invoice_billing_profile__c</fullName>
    <label>SaaSOptics e-Invoice Billing Profile</label>
    <type>Url</type>
</CustomField>