force-app/main/default/objects/Account/fields/saasoptics__mrr_at_end_of_month__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__mrr_at_end_of_month__c</fullName>
    <description>Used in with Visual Force</description>
    <label>MRR at End of Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>