force-app/main/default/objects/Account/fields/saasoptics__mrr_of_prior_month__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__mrr_of_prior_month__c</fullName>
    <description>Used with Visual Force</description>
    <label>MRR of Prior Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>