force-app/main/default/objects/Account/fields/saasoptics__next_invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__next_invoice_amount__c</fullName>
    <description>Used with Visual Force</description>
    <label>Next Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>