force-app/main/default/objects/Account/fields/saasoptics__next_invoice_due_date__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__next_invoice_due_date__c</fullName>
    <description>Used with Visual Force</description>
    <label>Next Invoice Due Date</label>
    <type>Date</type>
</CustomField>