force-app/main/default/objects/Account/fields/saasoptics__next_invoice_hyperlink_e_invoice__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__next_invoice_hyperlink_e_invoice__c</fullName>
    <description>Used with Visual Force</description>
    <label>Next Invoice Hyperlink (e-Invoice)</label>
    <type>Url</type>
</CustomField>