force-app/main/default/objects/Account/fields/saasoptics__saasoptics_total_revenue_scheduled__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__saasoptics_total_revenue_scheduled__c</fullName>
    <inlineHelpText>The total amount of revenue scheduled for transactions in SaaSOptics</inlineHelpText>
    <label>Total Revenue Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>