force-app/main/default/objects/Account/fields/Testing_Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Testing_Completion_Rate__c</fullName>
    <label>Testing Completion Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>