force-app/main/default/objects/Account/fields/Vendor_Accounts_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Accounts_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Accounts Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Vendor Accounts Contact)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>