force-app/main/default/objects/Account/fields/Vendor_Company__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Company__c</fullName>
    <label>Vendor Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor_Company</valueSetName>
    </valueSet>
</CustomField>