force-app/main/default/objects/Account/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Vendor Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>