force-app/main/default/objects/Account/fields/Vendor_Password__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Password__c</fullName>
    <label>Vendor Password</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>