force-app/main/default/objects/Account/fields/Vendor_Username__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Username__c</fullName>
    <label>Vendor Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>