force-app/main/default/objects/Account/listViews/Customers_Prospects.listView-meta.xml
<ListView>
    <fullName>Customers_Prospects</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer,Prospect</value>
    </filters>
    <label>Customers &amp; Prospects</label>
</ListView>